--- a/strava_vis/templates/index.html
+++ b/strava_vis/templates/index.html
@@ -1,6 +1,6 @@
 {% extends base %}
 
-{% block title %}Bokeh Crossfilter Example{% endblock %}
+{% block title %}Douglas and Dudes Strava Vis{% endblock %}
 
 {% block preamble %}
 <style>
